community(feat): further componentized events, moved events to state due to utilization of condditional rendering

--- a/src/components/state/Events/style.css
+++ b/src/components/state/Events/style.css
@@ -95,7 +95,8 @@
     margin-left: 1.4rem;
   }
 
-  .RedirectButton a {
-    margin-right: -1rem;
+  .RedirectButton {
+    margin-right: -3rem;
+    margin-left: -1rem;
   }
 }
