--- a/src/components/stateless/Opportunities/style.css
+++ b/src/components/stateless/Opportunities/style.css
@@ -1,7 +1,95 @@
+.opportunities-container {
+  height: 1650px;
+}
+
+.opportunities-container h2 {
+  width: 37.5rem;
+}
+
+.opportunities-container img {
+  display: block;
+  margin: auto;
+}
+
+.opportunities-content-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+  grid-row-gap: 84px;
+  margin-top: 1rem;
+}
+
+.company-name {
+  font-family: "Proxima-Nova", sans-serif;
+  font-size: 16px;
+  margin-left: 5.5rem;
+  margin-top: -1.7rem;
+}
+
+.opportunity-position {
+  font-size: 28px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  color: black;
+  text-align: left;
+  line-height: 33px;
+  margin-left: 50px;
+  margin-top: 1.5rem;
+}
+
+.opportunity-location {
+  margin-top: -1.25rem;
+  margin-bottom: 0.75rem;
+}
+
+.opportunity-location li {
+  font-family: "Proxima-Nova", sans-serif;
+  font-size: 12px;
+  margin-top: -1rem;
+  margin-left: 70px;
+  list-style-type: none;
+}
+
+.opportunity-location img {
+  position: relative;
+  left: -11rem;
+}
+
+.opportunity-type, .opportunity-experience {
+  font-family: "Proxima-Nova", sans-serif;
+  color: black;
+  font-size: 14px;
+  display: inline;
+  background: #C0EAFF;
+  border-radius: 18px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.opportunity-type {
+  padding-left: 32px;
+  padding-right: 32px;
+  margin-left: 50px;
+}
+
+.opportunity-experience {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 15px;
+}
+
+.opportunity-desc {
+  width: 366px;
+  font-family: "Proxima-Nova", sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  margin-left: 50px;
+  margin-top: 28px;
+}
+
 .OpportunityCard {
   width: 468px;
   height: 340px;
-  /* padding: 50px 42px 120px 60px; */
   box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
   border-bottom: 70px solid #F1F5FA;
 }
@@ -32,7 +120,7 @@
 }
 
 .OpportunityCard .RedirectButton {
-  margin-top: 5rem;
+  margin-top: 6rem;
   margin-right: 4.25rem;
 }
 
