--- a/src/components/stateless/MemberStories/style.css
+++ b/src/components/stateless/MemberStories/style.css
@@ -55,56 +55,141 @@
   margin-bottom: 3rem;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
+  .ms-image {
+    width: 75vw;
+  }
+
+  .ms-card {
+    grid-column: 5/10;
+    grid-row: 3/8;
+    margin-left: -4rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .ms-container {
-    height: 400px;
+    height: 580px;
     margin-top: -4rem;
     margin-bottom: 15rem;
   }
 
   .ms-container h2 {
-    width: 258px;
-    line-height: 34px;
+    width: 70vw;
+    line-height: 47px;
   }
 
   .ms-image {
-    width: 270px;
-    height: 186px;
-    margin-top: -0.5rem;
-    margin-left: -0.4rem;
+    width: 84vw;
+    height: 70vh;
+    margin-left: -0.5rem;
   }
 
   .ms-card {
-    height: 16rem;
-    margin-top: 6rem;
-    grid-column: 1/10;
+    height: 14rem;
+    margin-top: 12rem;
+    grid-column: 2/10;
     grid-row: 2/8;
+    margin-left: 1.75rem;
     box-shadow: 0 4px rgba(207, 204, 204, 0.23);
   }
 
   .MemberStoriesLabel {
     font-size: 12px;
-    margin-top: 1rem;
-    margin-left: 1.7rem;
+    margin-top: 1.5rem;
+    margin-left: 2.5rem;
   }
 
   .MemberStoriesTitle {
     font-size: 18px;
     line-height: 26px;
     width: 1rem;
-    margin-left: 1.7rem;
+    margin-left: 2.5rem;
     margin-top: -0.5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
 
   .ms-card .AuthorPic {
-    margin-left: 1.7rem;
+    margin-left: 2.5rem;
   }
 
   .ms-card .AuthorName {
     font-size: 12px;
     margin-bottom: 2.75rem;
-    margin-left: 4.5rem;
+    margin-left: 6rem;
+  }
+
+  .RedirectButton a {
+    float: right;
+    margin-right: 1rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .ms-card {
+    width: 100vw;
+    height: 16rem;
+    margin-top: 12rem;
+    grid-column: 1/10;
+    grid-row: 2/8;
+    box-shadow: 0 4px rgba(207, 204, 204, 0.23);
+    margin-left: 0rem;
+  }
+
+  .MemberStoriesLabel, .MemberStoriesTitle, .ms-card .AuthorPic  {
+    margin-left: 3.5rem;
+  }
+
+  .ms-card .AuthorName {
+    margin-left: 6.5rem;
+  }
+
+  .RedirectButton a {
+    float: right;
+    margin-right: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .ms-container h2 {
+    width: 258px;
+    line-height: 34px;
+  }
+
+  .ms-image {
+    width: 84vw;
+    height: 40vh;
+    margin-left: -0.5rem;
+  }
+
+  .ms-card {
+    margin-top: 9rem;
+  }
+
+  .MemberStoriesLabel, .MemberStoriesTitle, .ms-card .AuthorPic  {
+    margin-left: 2.5rem;
+  }
+
+  .ms-card .AuthorName {
+    margin-left: 5.5rem;
+  }
+
+  .RedirectButton a {
+    float: right;
+    margin-right: 10rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .ms-container h2 {
+    width: 258px;
+    line-height: 34px;
+  }
+
+  .ms-image {
+    width: 84vw;
+    height: 40vh;
+    margin-left: -0.5rem;
   }
 
   .RedirectButton a {
