member-stories(feat): minor adjustments for element positioning when screen is <= 320px

--- a/src/components/stateless/MemberStories/style.css
+++ b/src/components/stateless/MemberStories/style.css
@@ -189,3 +189,17 @@
     margin-right: -1.5rem;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .ms-image {
+    width: 90vw;
+  }
+
+  .MemberStoriesLabel, .MemberStoriesTitle, .ms-card .AuthorPic  {
+    margin-left: 1.25rem;
+  }
+
+  .ms-card .AuthorName {
+    margin-left: 4rem;
+  }
+}
