--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,15 @@ h2 {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 425px) {
+  h2 {
+    font-size: 24px;
+  }
+
+  .section-label {
+    font-size: 12px;
+  }
+
   .journey-button {
     width: 248px;
     grid-column: 1/1;
