--- a/src/components/pages/Work/style.css
+++ b/src/components/pages/Work/style.css
@@ -1,12 +1,40 @@
-h1{
+/* h1 {
     font-size: 300%;
-}
+} */
 
 h4 {
     color: rgb(204, 203, 203);
     letter-spacing: 7px;
 }
 
-body{
+body {
     font-family: Montserrat;
 }
+
+.Work .landing-container .section-label {
+    text-align: left;
+    margin-left: 9.5rem;
+}
+
+.Work .landing-container h2 {
+    width: 730px;
+    text-align: left;
+    margin-left: 9.5rem;
+}
+
+.Work .landing-container .journey-button {
+    margin-left: 9.5rem;
+}
+
+.Work .landing-container img {
+    position: absolute;
+    right: 9.5rem;
+    height: 568px;
+    width: 704px;
+    margin-top: 7rem;
+}
+
+
+
+
+
